tests/codegen/pass/028-match-simple.hyg
type U = union {
  foo: int; 
  bar: int
};

let x: U = foo{42};

fun testFun(t: U): int =
  match t with {
      bar{y} -> 2;
      foo{y} -> y + 1
  };

assert(testFun(x) = 43)
