tests/codegen/fail/021-match.hyg
type U = union {
  foo: int; 
  bar: string;
  baz: int
};

let x: U = baz{69};

fun testFun(t: U): int =
  match t with {
      bar{y} -> 2;
      foo{y} -> y + 1
  };

testFun(x)

